--- a/application.properties
+++ b/application.properties
@@ -1,3 +1,6 @@
 #Swagger
 springdoc.swagger-ui.path=/swagger-ui.html
 #logging.level = debug
+
+eureka.client.service-url.defaultZone=http://localhost:9999/eureka/
+eureka.instance.prefer-ip-address=true
