update new version

--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -2,4 +2,4 @@ server.port=9099
 
 server.servlet.context-path=/
 
-spring.cloud.gateway.discovery.locator.enabled=true
+spring.cloud.gateway.server.webflux.discovery.locator.enabled=true
