update new version

--- a/api-gateway.properties
+++ b/api-gateway.properties
@@ -2,4 +2,21 @@ server.port=9099
 
 server.servlet.context-path=/
 
-spring.cloud.gateway.server.webflux.discovery.locator.enabled=true
+#=====  using name which registered in EUREKA for route     =====
+#example: ACCOUNT-SERVICE, NOTIFICATION-SERVICE...
+#spring.cloud.gateway.server.webflux.discovery.locator.enabled=true
+
+#=====  config each route for service   =====
+#set id
+spring.cloud.gateway.routes[0].id=user-route
+#lb means load-balance. set the name using in eureka-client
+spring.cloud.gateway.routes[0].uri=lb://account-service
+#set route => access account-service by url: path/user
+spring.cloud.gateway.routes[0].predicates=Path=/user/**
+#skip 'user' when access api
+spring.cloud.gateway.routes[0].filters[0]=StripPrefix=1
+
+spring.cloud.gateway.routes[1].id=report-route
+spring.cloud.gateway.routes[1].uri=lb://statistic-service
+spring.cloud.gateway.routes[1].predicates=Path=/report/**
+spring.cloud.gateway.routes[1].filters[0]=StripPrefix=1
