update admin config

--- a/application.properties
+++ b/application.properties
@@ -4,3 +4,7 @@ springdoc.swagger-ui.path=/swagger-ui.html
 
 eureka.client.service-url.defaultZone=http://localhost:9999/eureka/
 eureka.instance.prefer-ip-address=true
+
+
+management.endpoints.web.exposure.exclude=*
+management.endpoint.health.show-details=always
