--- a/application.properties
+++ b/application.properties
@@ -6,5 +6,5 @@ eureka.client.service-url.defaultZone=http://localhost:9999/eureka/
 eureka.instance.prefer-ip-address=true
 
 
-management.endpoints.web.exposure.exclude=*
+management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
